--- a/css/style.css
+++ b/css/style.css
@@ -3,21 +3,97 @@
   --secondary-title-color: #212121;
   --main-text-color: #757575;
   --accent-color: #2196f3;
+  --gallery-set-gap: 30px;
 }
+body {
+  font-family: "Roboto", sans-serif;
+  color: #212121;
+}
+
+/* Main-setting */
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: 0px auto;
+}
+.container {
+  width: 1230px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.section {
+  padding-bottom: 94px;
+  padding-top: 94px;
+}
+
+/* Main-nav */
+.main-nav,
+.main-header {
+  display: flex;
+
+  align-items: center;
+}
+
+/* Header-nav */
+.main-header {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.header-nav {
+  display: flex;
+  margin-right: 331px;
+}
+
+.header-nav-item {
+  font-weight: 500;
+  display: flex;
+}
+.header-nav-link {
+  display: block;
+
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--secondary-title-color);
+}
+
+.header-nav-item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .header-nav-link.current,
 .button-filter.current {
   color: var(--accent-color);
 }
-.body {
-  font-family: "Roboto", sans-serif;
-  color: #212121;
-}
+
 /* Header */
 .header {
   background-color: #ffffff;
+  border: 1px solid #ececec;
 }
-.header-logo,
-.logo {
+.header-logo {
+  display: block;
+  align-items: center;
+
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   color: #2196f3;
@@ -26,28 +102,30 @@
   letter-spacing: 0.03em;
 }
 .header-logo-st {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
   color: #000000;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
+  margin-right: 93px;
 }
+/* List-link-decoration */
 .list {
   list-style: none;
 }
 .link {
   text-decoration: none;
 }
-.header-nav-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--secondary-title-color);
+
+/* Header-address */
+.address {
+  display: flex;
+  margin-left: auto;
 }
 
+.address-item + .address-item {
+  margin-left: 50px;
+}
 .address-link {
+  display: block;
+  align-items: center;
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -55,6 +133,8 @@
   color: var(--main-text-color);
   text-decoration: none;
 }
+
+/* Accent */
 .header-nav-link:hover,
 .address-link:hover {
   color: var(--accent-color);
@@ -63,9 +143,17 @@
 .address-link:focus {
   color: var(--accent-color);
 }
-/* Main */
+
+/* Hero */
+.hero {
+  height: auto;
+}
+
+/* Hero-title */
 
 .hero-title {
+  margin-bottom: 30px;
+
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -74,27 +162,45 @@
   text-transform: uppercase;
   color: var(--main-title-color);
   background-color: #2f303a;
-  width: 696px;
 }
-.hero {
-  padding: 200px 252px 280px 252px;
-}
+
+/* Hero-button */
 .hero-button {
+  color: var(--main-title-color);
+  background-color: #2196f3;
+  padding: 10px 32px 10px 32px;
+  border-radius: 4px;
+  border: 2px var(--accent-color);
+  border: 2px transparent;
+}
+
+.button-order {
+  display: block;
+
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  color: var(--main-title-color);
-  background-color: #2196f3;
   cursor: pointer;
-  width: 200px;
-  height: 50px;
+  min-width: 200px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  text-align: center;
+  text-decoration: none;
 }
-.button-order {
-  margin: 30px 252px 294px 252px;
+
+/* Services-section */
+.services-item {
+  display: flex;
 }
-/* Секция услуг */
+.services-item li:not(:last-child) {
+  margin-right: 30px;
+}
+.services-list {
+  width: 270px;
+}
 .main-services {
+  margin-bottom: 10px;
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -109,8 +215,11 @@
   letter-spacing: 0.03em;
   color: var(--main-text-color);
 }
-/* Чем занимаеться студия */
+
+/* What-studio-makes */
 .what-studio-makes {
+  margin-bottom: 50px;
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -118,11 +227,27 @@
   letter-spacing: 0.03em;
   color: var(--secondary-title-color);
 }
-/* Команда */
+.list-what-studio-makes {
+  display: flex;
+  justify-content: center;
+}
+.image-of-studio-duty:not(:last-child) {
+  margin-right: 30px;
+}
+
+/* Team-card */
+.team-card-content {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  align-items: center;
+}
+/* Team */
 .team {
   background-color: #f5f4fa;
 }
 .our-team {
+  margin-bottom: 50px;
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -131,7 +256,28 @@
   color: var(--secondary-title-color);
 }
 
+.list-team {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: calc(-1 * var(--gallery-set-gap));
+  margin-top: calc(-1 * var(--gallery-set-gap));
+}
+.team-image {
+  flex-basis: calc((100% / 4 - var(--gallery-set-gap)));
+  margin-left: var(--gallery-set-gap);
+  margin-top: var(--gallery-set-gap);
+
+  box-shadow: 0px 2px 1px 0px #00000033, 0px 1px 1px 0px #00000024,
+    0px 1px 3px 0px #0000001f;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+/* Team members */
+
 .members-names {
+  margin-bottom: 10px;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -139,6 +285,9 @@
   letter-spacing: 0.03em;
   color: var(--secondary-title-color);
 }
+
+/* Members-position */
+
 .members-position {
   font-size: 16px;
   line-height: 1.18;
@@ -146,8 +295,18 @@
   letter-spacing: 0.03em;
   color: var(--main-text-color);
 }
-/* Фильтр меню в портфолио */
 
+/* Button-filter-portfolio */
+
+.filter {
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+
+.filter-button-item:not(:last-child) {
+  margin-right: 8px;
+}
 .button-filter {
   font-weight: 500;
   font-size: 16px;
@@ -157,7 +316,26 @@
   color: var(--secondary-title-color);
   cursor: pointer;
   background-color: #f5f4fa;
+  padding: 6px 22px;
+  border-radius: 4px;
+  border: 4px transparent;
 }
+.all {
+  min-width: 73px;
+}
+.web-sites {
+  min-width: 128px;
+}
+.aplication {
+  min-width: 145px;
+}
+.design {
+  min-width: 103px;
+}
+.marketing {
+  min-width: 130px;
+}
+
 .button-filter:hover {
   background-color: var(--accent-color);
   color: var(--main-title-color);
@@ -166,13 +344,36 @@
   background-color: var(--accent-color);
   color: var(--main-title-color);
 }
-/* Галерея в портфолио */
+
+/* Gallery-portfolio */
+.gallery {
+  margin-left: calc(-1 * var(--gallery-set-gap));
+  margin-top: calc(-1 * var(--gallery-set-gap));
+
+  display: flex;
+  flex-wrap: wrap;
+}
+.gallery-list {
+  flex-basis: calc((100% / 3 - var(--gallery-set-gap)));
+  margin-left: var(--gallery-set-gap);
+  margin-top: var(--gallery-set-gap);
+
+  box-shadow: 0px 4px 4px 0px #00000040;
+}
+.gallery-list:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+.gallery-list:nth-child(3n) {
+  margin-right: 0px;
+}
 .gallery-list-title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--secondary-title-color);
+
+  margin-bottom: 4px;
 }
 .gallery-list-description {
   font-size: 16px;
@@ -180,10 +381,30 @@
   letter-spacing: 0.03em;
   color: var(--main-text-color);
 }
-/* Футер */
+
+/* Card-content */
+
+.card-content {
+  padding: 20px 24px;
+}
+
+/* Card-thumb */
+
+/* Footer-contacts */
 .contacts {
   background-color: #2f303a;
 }
+
+/* Logo in footer */
+.logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  color: #2196f3;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+}
+
 .logo-studio-footer {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -192,6 +413,16 @@
   line-height: 1.19;
   letter-spacing: 0.03em;
 }
+
+.footer-contacts:not(:last-child) {
+  margin-bottom: 9px;
+}
+.footer-section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  justify-content: flex-start;
+}
+/* Address */
 .studio-location {
   color: var(--main-title-color);
   font-size: 14px;
@@ -204,51 +435,15 @@
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
+.address-footer {
+  margin-top: 20px;
+}
 
-.header-nav,
-.address,
-.section,
-.hero-title,
-.hero-button,
-.services-item,
-.what-studio-makes,
-.list-what-studio-makes,
-.our-team,
-.list-team,
-.members-names,
-.members-position,
-.address-footer,
-.filter,
-.gallery,
-.gallery-list,
-.gallery-list-title,
-.gallery-list-description,
-.list {
-  margin: 0;
-  padding: 0;
-}
-.container {
-  width: 1200px;
-}
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-.header {
-  background-color: tomato;
-}
+/* Background color for training */
 .hero {
-  background-color: violet;
+  background-color: #2f303a;
 }
-.services {
-  background-color: yellow;
-}
-.works {
-  background-color: green;
-}
-.team {
-  background-color: blue;
-}
+
 .contacts {
-  background-color: teal;
+  background-color: #2f303a;
 }
