--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ img {
   margin: 0px auto;
 }
 .container {
-  width: 1230px;
+  width: 1200px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
@@ -45,22 +45,21 @@ img {
 }
 
 /* Main-nav */
-.main-nav,
-.main-header {
+.main-nav {
   display: flex;
-
   align-items: center;
 }
 
 /* Header-nav */
-.main-header {
-  padding-top: 32px;
-  padding-bottom: 32px;
+
+.header-container {
+  display: flex;
+  align-items: center;
 }
 
 .header-nav {
   display: flex;
-  margin-right: 331px;
+  align-items: center;
 }
 
 .header-nav-item {
@@ -68,12 +67,11 @@ img {
   display: flex;
 }
 .header-nav-link {
-  display: block;
-
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-title-color);
+  padding: 32px 0px;
 }
 
 .header-nav-item:not(:last-child) {
@@ -87,12 +85,11 @@ img {
 
 /* Header */
 .header {
-  background-color: #ffffff;
-  border: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 .header-logo {
-  display: block;
   align-items: center;
+  margin-right: 93px;
 
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -103,7 +100,6 @@ img {
 }
 .header-logo-st {
   color: #000000;
-  margin-right: 93px;
 }
 /* List-link-decoration */
 .list {
@@ -123,7 +119,6 @@ img {
   margin-left: 50px;
 }
 .address-link {
-  display: block;
   align-items: center;
 
   font-weight: 500;
@@ -172,11 +167,6 @@ img {
   border-radius: 4px;
   border: 2px var(--accent-color);
   border: 2px transparent;
-}
-
-.button-order {
-  display: block;
-
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -189,6 +179,10 @@ img {
 }
 
 /* Services-section */
+.hidden-title {
+  visibility: hidden;
+}
+
 .services-item {
   display: flex;
 }
@@ -217,7 +211,7 @@ img {
 }
 
 /* What-studio-makes */
-.what-studio-makes {
+.works-title {
   margin-bottom: 50px;
 
   font-weight: 700;
@@ -227,9 +221,8 @@ img {
   letter-spacing: 0.03em;
   color: var(--secondary-title-color);
 }
-.list-what-studio-makes {
+.works-list {
   display: flex;
-  justify-content: center;
 }
 .image-of-studio-duty:not(:last-child) {
   margin-right: 30px;
@@ -237,8 +230,8 @@ img {
 
 /* Team-card */
 .team-card-content {
-  margin-top: 30px;
-  margin-bottom: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   align-items: center;
 }
 /* Team */
@@ -304,7 +297,7 @@ img {
   justify-content: center;
 }
 
-.filter-button-item:not(:last-child) {
+.filter-item:not(:last-child) {
   margin-right: 8px;
 }
 .button-filter {
@@ -353,12 +346,11 @@ img {
   display: flex;
   flex-wrap: wrap;
 }
+
 .gallery-list {
   flex-basis: calc((100% / 3 - var(--gallery-set-gap)));
   margin-left: var(--gallery-set-gap);
   margin-top: var(--gallery-set-gap);
-
-  box-shadow: 0px 4px 4px 0px #00000040;
 }
 .gallery-list:nth-last-child(-n + 3) {
   margin-bottom: 0px;
@@ -388,11 +380,16 @@ img {
   padding: 20px 24px;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* Card-thumb */
 
 /* Footer-contacts */
-.contacts {
+.footer {
   background-color: #2f303a;
+  padding: 60px 0px;
 }
 
 /* Logo in footer */
@@ -417,12 +414,12 @@ img {
 .footer-contacts:not(:last-child) {
   margin-bottom: 9px;
 }
-.footer-section {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  justify-content: flex-start;
-}
+
 /* Address */
+address {
+  font-style: normal;
+}
+
 .studio-location {
   color: var(--main-title-color);
   font-size: 14px;
@@ -439,11 +436,9 @@ img {
   margin-top: 20px;
 }
 
-/* Background color for training */
 .hero {
   background-color: #2f303a;
-}
+  text-align: center;
 
-.contacts {
-  background-color: #2f303a;
+  padding: 200px 0px;
 }
